tests/compile-fail/panic/panic_abort3.stderr
thread 'main' panicked at 'panicking from libcore', $DIR/panic_abort3.rs:5:5
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: abnormal termination: the program aborted execution
  --> /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/panic_abort/src/lib.rs:43:17
   |
43 |                 libc::abort();
   |                 ^^^^^^^^^^^^^ the program aborted execution
   |
   = note: inside `panic_abort::__rust_start_panic::abort` at /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/panic_abort/src/lib.rs:43:17
   = note: inside `panic_abort::__rust_start_panic` at /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/panic_abort/src/lib.rs:38:5
   = note: inside `std::panicking::rust_panic` at /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/std/src/panicking.rs:746:9
   = note: inside `std::panicking::rust_panic_with_hook` at /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/std/src/panicking.rs:716:5
   = note: inside closure at /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/std/src/panicking.rs:586:13
   = note: inside `std::sys_common::backtrace::__rust_end_short_backtrace::<[closure@std::panicking::begin_panic_handler::{closure#0}], !>` at /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/std/src/sys_common/backtrace.rs:138:18
   = note: inside `std::panicking::begin_panic_handler` at /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/std/src/panicking.rs:584:5
   = note: inside `std::rt::panic_fmt` at /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/core/src/panicking.rs:143:14
   = note: inside `core::panicking::panic` at /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/core/src/panicking.rs:48:5
note: inside `main` at /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/core/src/panic.rs:28:9
  --> $DIR/panic_abort3.rs:5:5
   |
5  |     core::panic!("panicking from libcore");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

